@@ -73,7 +73,7 @@ int dupe_file_checker::checkhavefile(const char *f, const string &messageid, ulo
 	for (;curl!=flist.end() && curl->first<bytes;++curl){ //keep going as long as size < bytes
 		fm=curl->second;
 		if ((fm->reg.match(f)==0/* || fm->reg.match((messageid+".txt").c_str())==0*/)){//TODO: handle text files saved.
-			printf("already have %s\n",f);
+			PMSG("already have %s",f);
 			return 1;
 		}
 	}
